--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+teloxide = { version = "0.17.0", features = ["macros"] }
+log = "0.4.27"
+pretty_env_logger = "0.5.0"
+tokio = { version =  "1.46.1", features = ["rt-multi-thread", "macros"] }
