--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ edition = "2024"
 [dependencies]
 teloxide = { version = "0.17.0", features = ["macros"] }
 log = "0.4.27"
+dotenvy = "0.15.7"
 pretty_env_logger = "0.5.0"
 tokio = { version =  "1.46.1", features = ["rt-multi-thread", "macros"] }
