--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ dotenvy = "0.15.7"
 pretty_env_logger = "0.5.0"
 tokio = { version =  "1.46.1", features = ["rt-multi-thread", "macros"] }
 serde_json = "1.0.145"
+serde = "1.0.228"
